--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,22 @@
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
 spring:
   application:
-    name: 
+    name: config-server
+
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/samrouth1234/microservice-configurations-service
+          clone-on-start: true
+          search-paths: configurations
+
   
