--- a/application.yml
+++ b/application.yml
@@ -1,23 +1,9 @@
 eureka:
   instance:
     hostname: localhost
-    prefer-ip-address: true
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka
 
-spring:
-  application:
-    name: config-server
-
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/samrouth1234/microservice-configurations-service
-          clone-on-start: true
-          search-paths: configurations
 
   
